pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  labels:
    app: my-sql
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - lab-m04
  containers:
  - name: mysql
    image: mysql:8
    ports:
    - containerPort: 3306
