service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-sql
spec:
  type: ClusterIP
  selector:
    app: my-sql
  ports:
  - port: 3306
    targetPort: 3306
